set antializing on the item itself as well

to prevent fuzzyness

BUG: 458181


(cherry picked from commit 60d2b736edd00ae4aa0c784355e7fe11fe413d1c)